# bashlibs

./: .bakerc  .gitignore  README  README.md  TODO
gentoo/portage/eclass/: bashlibs.eclass
gentoo/portage/profiles/: categories  repo_name
git-hooks/: prepare-commit-msg
src/bashlibs-apt/: CMakeLists.txt
src/bashlibs-apt/lib/: apt.sh  apt_cmd.sh
src/bashlibs-apt/test/: test_apt.sh  test_apt_cmd.sh
src/bashlibs-base/: CMakeLists.txt
src/bashlibs-base/lib/: base.sh  header.sh  include.sh
src/bashlibs-build-utils/: CMakeLists.txt  bake-intree-init
src/bashlibs-build-utils/lib/: bake.sh  bake_cmake.sh  bake_cmdline.sh  bake_config.sh  bake_debian.sh  bake_gentoo.sh  bake_test.sh  deb_repository.sh  package_build.sh
src/bashlibs-build-utils/test/: test_bake_cmake.sh  test_bake_cmdline.sh  test_bake_config.sh  test_bake_debian.sh  test_bake_gentoo.sh  test_bake_test.sh  test_deb_repository.sh  test_package_build.sh
src/bashlibs-checks/: CMakeLists.txt
src/bashlibs-checks/lib/: checks.sh
src/bashlibs-checks/test/: test_checks.sh
src/bashlibs-checksum/: CMakeLists.txt
src/bashlibs-checksum/lib/: checksum.sh
src/bashlibs-checksum/test/: test_checksum.sh
src/bashlibs-chroot/: CMakeLists.txt
src/bashlibs-chroot/lib/: chroot.sh
src/bashlibs-chroot/test/: test_chroot.sh
src/bashlibs-cmake-macros/: .bakerc  CMakeLists.txt
src/bashlibs-cmake-macros/Modules/: BashLibs.cmake
src/bashlibs-cmdline/: CMakeLists.txt
src/bashlibs-cmdline/lib/: cmdline.sh
src/bashlibs-code-clarity/: CMakeLists.txt
src/bashlibs-colors/: CMakeLists.txt
src/bashlibs-config/: CMakeLists.txt
src/bashlibs-date/: CMakeLists.txt  TODO
src/bashlibs-directories/: CMakeLists.txt
src/bashlibs-disks/: CMakeLists.txt
src/bashlibs-dns/: CMakeLists.txt
src/bashlibs-file-manipulations/: CMakeLists.txt
src/bashlibs-gentoo/: CMakeLists.txt
src/bashlibs-git/: AUTHORS  CMakeLists.txt
src/bashlibs-grub/: CMakeLists.txt
src/bashlibs-initramfs/: CMakeLists.txt
src/bashlibs-kernel-cmdline/: CMakeLists.txt
src/bashlibs-kernel-modules/: CMakeLists.txt
src/bashlibs-kernel-versioning/: CMakeLists.txt
src/bashlibs-libvirt/: CMakeLists.txt
src/bashlibs-math/: CMakeLists.txt  License
src/bashlibs-net/: .bakerc  CMakeLists.txt
src/bashlibs-os-detection/: CMakeLists.txt
src/bashlibs-qemu/: CMakeLists.txt
src/bashlibs-shunit2-enhancements/: CMakeLists.txt
src/bashlibs-ssh/: .bakerc  CMakeLists.txt
src/bashlibs-string/: CMakeLists.txt
src/bashlibs-sysfs/: CMakeLists.txt
src/bashlibs-templates/: CMakeLists.txt  License
src/bashlibs-tests/: CMakeLists.txt  License  README
src/bashlibs-usage/: CMakeLists.txt
src/bashlibs-user/: CMakeLists.txt
src/bashlibs-utils/: CMakeLists.txt
src/bashlibs-verbose/: CMakeLists.txt
src/bashlibs-versions/: CMakeLists.txt
src/cmake-macros/: AUTHORS  CMakeLists.txt  README
src/cmake-macros/Modules/: CPackSimple.cmake  InstallDocs.cmake  OSDetection.cmake  PackageCreator.cmake  SetAppVersion.cmake
(+462 files in other folders)
